--- a/index.html
+++ b/index.html
@@ -106,25 +106,6 @@
             .pointer {
                 cursor: pointer;
             }
-            .gear {
-	            display: block;
-	            display: block;
-	            border-radius: 50%;
-	            padding:0;
-	            position:absolute;
-	            color:white;
-	            background-color: transparent;
-            }
- 
-            .gear.two {
-  	            border:2px dashed; 
-  	            height: 20px;
-	            width: 20px;
-	            box-shadow:	inset 0 0 0 4px white;
-	            top:2%;
-	            left:2%;
-
-            }
             .fixed {
                 position: fixed;
             }
@@ -134,7 +115,23 @@
             .hide {
                 display: none;
             }
+	    .gear {
+                position: fixed;
+                top:1%; 
+                left:2%;
+            }
+            .gear:hover {
+                animation: spin 2s infinite;
+            }
 
+            @keyframes spin {
+                from {
+                    transform: rotate(0);
+                }
+                to {
+                    transform: rotate(359deg);
+                }
+            }
  
 
 
@@ -145,7 +142,7 @@
     </head>
     <body style="height: 550 !important; width: 372;">
         <div id="param" class="fixed">
-        <a><img src="img/gear.png" width="20px" height="20px" class="pointer" style="top:0%; left:2%;"></a>
+        <a><img src="img/gear.png" width="20px" height="20px" class="pointer gear"></a>
         </div>
         
         <center>
